# aigt_detector

./: README.md  core.py  dstack.yml  processor.py  processor_config.py  processor_utils.py  pyproject.toml  test_core.py
aigt/: __init__.py  aggregation.py  config.py  detect_batch  detect_batch.py  detector.py
data/: qlora_training_data_windows_DE.csv
scripts/: predict.py  train_windows.py
tests/: test_windowing.py
